get version number in javadoc

--- a/build.xml
+++ b/build.xml
@@ -4,8 +4,10 @@
 
   <property name="project.name" value="spash" />
   <property name="version" value="0.2" />
-  <property name="jar.file" value="${project.name}-${version}.jar" />
-  <property name="javadoc.zip" value="${project.name}-${version}-javadoc.zip" />
+  <property name="name.and.version" value="${project.name}-${version}" />
+  
+  <property name="jar.file" value="${name.and.version}.jar" />
+  <property name="javadoc.zip" value="${name.and.version}-javadoc.zip" />
   
   <property name="target.dir" location="target" />
   <property name="classes.dir" location="${target.dir}/classes" />
@@ -50,7 +52,11 @@
 
   <target name="javadoc">
     <mkdir dir="${javadoc.dir}" />
-    <javadoc sourcepath="${src.dir}" destdir="${javadoc.dir}" />
+    <javadoc
+      sourcepath="${src.dir}"
+      destdir="${javadoc.dir}"
+      windowtitle="${name.and.version}"
+      doctitle="${name.and.version}"/>
     <zip destfile="${target.dir}/${javadoc.zip}">
       <zipfileset dir="${javadoc.dir}"/>
     </zip>
