--- a/build.xml
+++ b/build.xml
@@ -25,12 +25,12 @@
 
   <target name="compile">
     <mkdir dir="${classes.dir}" />
-    <javac srcdir="${src.dir}" destdir="${classes.dir}" debug="true" />
+    <javac srcdir="${src.dir}" destdir="${classes.dir}" debug="true"  source="1.5" target="1.5"/>
   </target>
 
   <target name="compile-tests" depends="compile">
     <mkdir dir="${test.classes.dir}" />
-    <javac srcdir="${test.src.dir}" destdir="${test.classes.dir}" debug="true">
+    <javac srcdir="${test.src.dir}" destdir="${test.classes.dir}" debug="true" source="1.5" target="1.5">
       <classpath refid="test.classpath" />
     </javac>
   </target>
