--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <project name="spash" basedir="." default="jar">
-  <description>2D overlap library</description>
+  <description>basic 2D shape overlap and ray library</description>
 
   <property name="project.name" value="spash" />
   <property name="version" value="0.2" />
@@ -12,15 +12,22 @@
   <property name="target.dir" location="target" />
   <property name="classes.dir" location="${target.dir}/classes" />
   <property name="test.classes.dir" location="${target.dir}/test-classes" />
+  <property name="demo.classes.dir" location="${target.dir}/demo-classes" />
   <property name="javadoc.dir" location="${target.dir}/javadoc"/>
   <property name="src.dir" location="src" />
   <property name="test.src.dir" location="test" />
+  <property name="demo.src.dir" location="demo" />
 
   <path id="test.classpath">
     <pathelement location="${test.classes.dir}" />
     <pathelement location="${classes.dir}" />
     <pathelement location="lib/junit-4.1.jar" />
     <pathelement location="lib/mockito-all-1.6.jar" />
+  </path>
+  
+  <path id="demo.classpath">
+    <pathelement location="${demo.classes.dir}" />
+    <pathelement location="${classes.dir}" />
   </path>
 
   <target name="compile">
@@ -32,6 +39,13 @@
     <mkdir dir="${test.classes.dir}" />
     <javac srcdir="${test.src.dir}" destdir="${test.classes.dir}" debug="true" source="1.5" target="1.5">
       <classpath refid="test.classpath" />
+    </javac>
+  </target>
+  
+  <target name="compile-demos" depends="compile">
+    <mkdir dir="${demo.classes.dir}" />
+    <javac srcdir="${demo.src.dir}" destdir="${demo.classes.dir}" debug="true" source="1.5" target="1.5">
+      <classpath refid="demo.classpath" />
     </javac>
   </target>
 
@@ -65,4 +79,10 @@
   <target name="clean">
     <delete dir="${target.dir}" />
   </target>
+  
+  <target name="run-ray-demo" depends="compile-demos">
+		<java classname="org.spash.demo.RayDemo" fork="true">
+			<classpath refid="demo.classpath"/>
+		</java>
+	</target>
 </project>
